--- a/.prlintrc
+++ b/.prlintrc
@@ -2,7 +2,7 @@
     "include": {},
     "checks": {
         "branch": {
-            "Branch name must start with 'Chieze-Franklin-patch-'": "branch.name.startsWith('Chieze-Franklin-patch-')"
+            "Name must start with 'ft-' or 'ch-' or 'bug-' followed by stuff": "/^((ft-)|(ch-)|(bug-))[a-z\-]+$/.test(branch.name)"
         },
         "commit": {
             "Always true test": "true",
